요구 사항 구현 완료

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.metaweather"
+        applicationId "com.byounghong.weatherforecas"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
